# kb-assistant-challenge

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  response_tests.json
kbac/loaders/: antiguo_matrix_script_loader.py  matrix_script_loader.py
src/api/: app.py  dependencies.py  main.py  routers.py  schemas.py
src/services/: document_loader_service.py  generator_service.py  qdrant_retriever_service.py  rag_service.py  retriever_service.py
src/services/implementations/: matrix_document_loader_service.py  matrix_generator_service.py
src/settings/: config.py
tests/: conftest.py
tests/api/: test_api_advanced.py  test_api_basic.py
tests/core/: test_rag_pipeline.py  test_retriever_component.py
